# eros-assistant

./: .env.example  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  dev-requirements.txt  pyproject.toml  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-ci..yml  release.yml
eros/: brain.py  main.py
src/eros/: brain.py  config.py  main.py
tests/: test_brain.py  test_config.py  test_main.py
