[project]
name = "eros-assistant"
version = "0.1.0"
authors = [
    { name = "João Pedro Franca", email = "francasjoaopedro@gmail.com" },
]
description = "Eros: A privacy-first Personal AI Assistant in Python. Built as an educational project to explore automation, AI orchestration, and self-hosted models."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer[all]",
    "python-dotenv",
    "google-generativeai",
    "rich",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# Dependências opcionais (para desenvolvimento)
[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "pytest-mock",
]

# Ponto de entrada para o nosso CLI
[project.scripts]
eros = "eros.main:app"

